--- a/style.css
+++ b/style.css
@@ -85,3 +85,14 @@
     -moz-box-shadow: 3px 3px 0px rgba(0,0,0,0.15);
     box-shadow: 3px 3px 0px rgba(0,0,0,0.15);
 } */
+
+/* Pictures below this point */
+
+#superQuiz-logo{
+  width: 100%;
+  height: 50%;
+}
+#firstText{
+  text-align: center;
+  font-family: cursive;
+}
