--- a/style.css
+++ b/style.css
@@ -1,35 +1,42 @@
 /* Orange background color to the top navigation */
 .topNav {
-    background-color: orangered;
+    background-color:#ffae00;
     height: 50px;
   }
   /* Style the links inside the navigation bar */
   .topNav a {
-    float: left;
-    color:brown
+    float: none;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px; 
+    padding-top: 15px;
+    padding-right: 16px;
+    padding-bottom: 16.5px;
+    padding-left: 16px;
     text-decoration: none;
     font-size: 17px;
   }
-  /* Change the color of links on hover */
+  /* Changing the color of links on hover */
   .topNav a:hover {
-    background-color:lightblue
-    color: darkgreen
+  background-color: #3e8e41;
   }
-  /* Add a color to the active/current link */
+  /* Add new color to the active/current link */
   .topNav a.active {
-    background-color:goldenrod
-    color: black
+    background-color: #3e8e41;
+    
   }
 
   /* Dropdown Button */
 .dropbtn {
   background-color: #ffae00;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
+  color: #551A8B;
+  padding: 15px;
+  padding-top: 15px;
+  padding-right: 16px;
+  padding-bottom: 15.8px;
+  padding-left: 16px;
+  font-size: 17px;
   border: none;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -44,7 +51,7 @@
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 1px 1px 10px 1px rgba(0,0,0,1);
   z-index: 1;
 }
 
@@ -56,7 +63,7 @@
   display: block;
 }
 
-/* Change color of dropdown links on hover */
+/* Set new color of dropdown-box links on hover */
 .dropdown-content a:hover {background-color: #ddd;}
 
 /* Show the dropdown menu on hover */
@@ -65,34 +72,22 @@
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
-  /* #dropdownQuizItem:hover {
-    z-index: 4000;
-    background-color: #ffae00;
-    height: auto;
-    width: 180px;
-    display: block;
-    float: none !important;
-    color: #fff;
-    position: absolute;
-    -webkit-border-bottom-right-radius: 6px;
-    -webkit-border-bottom-left-radius: 6px;
-    -moz-border-radius-bottomright: 6px;
-    -moz-border-radius-bottomleft: 6px;
-    border-bottom-right-radius: 6px;
-    border-bottom-left-radius: 6px;
-    padding: 0 0 10px 0;
-    -webkit-box-shadow: 3px 3px 0px rgba(0,0,0,0.15);
-    -moz-box-shadow: 3px 3px 0px rgba(0,0,0,0.15);
-    box-shadow: 3px 3px 0px rgba(0,0,0,0.15);
-} */
-
 /* Pictures below this point */
-
 #superQuiz-logo{
-  width: 100%;
-  height: 50%;
+  width: 500px;
+  height: 250px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+/* Pictures above this point */
+
+/* Text below this point */
 #firstText{
   text-align: center;
   font-family: cursive;
+}
+#secondText{
+  text-align: center;
+  font-style: italic;
 }
