--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@
   .topNav a {
     float: none;
     text-align: center;
-    padding: 16px; 
+    padding: none; 
     padding-top: 15px;
     padding-right: 16px;
     padding-bottom: 16.5px;
     padding-left: 16px;
     text-decoration: none;
     font-size: 17px;
+    margin-right: -4px;;
   }
   /* Changing the color of links on hover */
   .topNav a:hover {
@@ -22,6 +23,7 @@
   /* Add new color to the active/current link */
   .topNav a.active {
     background-color: #3e8e41;
+    margin-left: -4px;
     
   }
 
@@ -64,7 +66,10 @@
 }
 
 /* Set new color of dropdown-box links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+  margin-right: 1px;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: grid;}
