--- a/style.css
+++ b/style.css
@@ -39,11 +39,12 @@
   font-size: 17px;
   border: none;
   font-family: 'Times New Roman', Times, serif;
+  margin-right: -4px; /* removes margin between blocks in topNav, only one side needed */
 }
 
-/* The container <div> - needed to position the dropdown content */
+/* Dropdown position */
 .dropdown {
-  position: relative;
+  position: relative; /*this code might be unnessesary */
   display: inline-block;
 }
 
@@ -59,7 +60,7 @@
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: 551A8B; /* blue-violet text in dropdown-content */
   padding: 12px 16px;
   text-decoration: none;
   display: block;
